--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="bootstrap.css">
+    <script src="bootstrap.bundle.js"></script>
     <title>SORRY NA PO &#128532</title>
 
     <style>
@@ -85,7 +85,7 @@
 
 <script>
 
-    const images = ["images/sadCat02.gif", "images/sadCat.gif", "images/sadCat01.gif","images/cat.gif"];
+    const images = ["sadCat02.gif", "sadCat.gif", "sadCat01.gif","cat.gif"];
     const buttonLabels = ["Sorry na po", "Wag ka na magalit, please?", "Please, love?","Magpapakabait na po ako"];
 
     let currentIndex = 0;
