--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 
                 <div class="modal-body text-center">
-                    <img src="images/sadCat.gif" class="m-5" width="400px" id="modalImage">
+                    <img src="sadCat.gif" class="m-5" width="400px" id="modalImage">
                 </div>
     
                 <div class="modal-footer">
