--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="modal" id="message">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="modalTitle"></h1>
